[metadata]
name = moldstamp
version = attr: moldstamp.VERSION
description = A simple static site generator
long_description = file: README.md, LICENSE
#keywords = make
license = MIT
classifiers =
    Programming Language :: Python :: 3
install_requires =
    markdown2
    pygments

[options]
scripts =
  moldstamp.py

[options.entry_points]
console_scripts =
    moldstamp = moldstamp:main
