[metadata]
name = moldstamp
version = attr: moldstamp.VERSION
description = A simple static site generator
long_description = file: README.md, LICENSE
#keywords = make
license = MIT
classifiers =
    Programming Language :: Python :: 3
install_requires =

[options]
packages =
    moldstamp
install_requires =
    markdown2
    pygments
    bottle
    livereload

[options.entry_points]
console_scripts =
    moldstamp = moldstamp:main
